# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/crypto_framework/common/common.gni")
import("//base/security/crypto_framework/frameworks/frameworks.gni")
import("//build/lite/config/component/lite_component.gni")
import("//build/ohos.gni")

ohos_static_library("cryptoframework_jsi") {
  subsystem_name = "security"
  part_name = "crypto_framework"
  include_dirs = [ "inc" ]
  include_dirs += framework_inc_path
  include_dirs += [
    "../../../../../hiviewdfx/hilog_lite/interfaces/native/kits/hilog_lite",
  ]

  sources = [
    "src/jsi_api.cpp",
    "src/jsi_api_common.cpp",
    "src/jsi_api_errcode.cpp",
    "src/jsi_list.cpp",
    "src/jsi_md.cpp",
    "src/jsi_rand.cpp",
    "src/jsi_utils.cpp",
  ]
  defines = [ "MINI_HILOG_ENABLE" ]

  deps = [
    "../../../common:crypto_common_lite",
    "../../../frameworks:crypto_framework_lib",
  ]

  configs = [ "${product_path}:product_public_configs" ]
}
