# Copyright (C) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/crypto_framework/frameworks/frameworks.gni")

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
module_output_path = "crypto_framework/crypto_framework"

##############################fuzztest##########################################
ohos_fuzztest("AsyKeyGeneratorFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "//base/security/crypto_framework/test/fuzztest/key/asykeygenerator_fuzzer"
  include_dirs = framework_inc_path
  include_dirs += [ "//base/security/crypto_framework/test/unittest/include/" ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "asykeygenerator_fuzzer.cpp" ]
  deps = [ "../../../../plugin:crypto_openssl_plugin_lib" ]

  external_deps = [
    "bounds_checking_function:libsec_shared",
    "c_utils:utils",
    "crypto_framework:crypto_framework_lib",
    "hilog:libhilog",
    "openssl:libcrypto_shared",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":AsyKeyGeneratorFuzzTest",
  ]
}
###############################################################################
